--- a/public/404.html
+++ b/public/404.html
@@ -90,7 +90,11 @@
         <div style="display: flex; align-items: center; gap: 10px">
             <svg viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#000000" width="25" height="25" stroke-width="0.304"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M15 1H1V15H15V1ZM6 5L7.41421 6.41421L5.82843 8L7.41421 9.58579L6 11L3 8L6 5ZM10 5L8.58579 6.41421L10.1716 8L8.58579 9.58579L10 11L13 8L10 5Z" fill="#ffffff"></path> </g></svg>
 
-            <span style="font-weight: bold">Joshua MARTINELLE</span>
+            <a
+                href="/"
+                style="font-weight: bold; text-decoration: none; color: inherit"
+                >Joshua MARTINELLE</a
+            >
         </div>
 
         <div style="display: flex; align-items: center; margin-right: 2vh">
